trocado a descrição do partido (PSOL)

--- a/index.html
+++ b/index.html
@@ -161,12 +161,7 @@
               <div class="descricao">
                 <h3>Descrição</h3>
                 <p>
-                  A expressão “trabalhe enquanto eles dormem” poderia ter sido
-                  facilmente criada por este pokedev. Afinal, ele tem o dom de
-                  codar por horas e horas, madrugada adentro, regado a muito
-                  café e energéticos. Sua dedicação é tão intensa que, enquanto
-                  a maioria das pessoas está descansando, ele está imerso em
-                  linhas de código, resolvendo problemas e criando soluções.
+                  Partido de esquerda, surgido de uma dissidência do PT em 2004, com uma agenda progressista que abrange direitos humanos, ambientalismo e justiça social.
                 </p>
               </div>
             </div>
